# Projet_Airbnb

./: README.md  annonces.json  donnees.json  index.html  pyproject.toml  toulouse.json
final/: __main__.py  lib_affichage.py  lib_annonce.py  lib_choix_utilisateur.py  lib_nettoyage.py  lib_predicteur.py  lib_scraping.py
htmlcov/: lib_affichage_py.html  lib_annonce_py.html  lib_choix_utilisateur_py.html  lib_nettoyage_py.html  lib_predicteur_py.html  lib_scraping_py.html  status.json  test_affichage_py.html  test_annonce_py.html  test_choix_utilisateur_py.html  test_predicteur_py.html  test_scraping_py.html
tests/: test_affichage.py  test_annonce.py  test_choix_utilisateur.py  test_final.py  test_predicteur.py  test_scraping.py
